@@ -13,7 +13,7 @@ apply plugin: 'application'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 mainClassName = 'edu.mcw.rgd.dataload.FullAnnotIndex'
-String myAppName = 'fullAnnotIndex'
+String myAppName = 'full-annot-index-pipeline'
 
 project.archivesBaseName = myAppName
 
@@ -24,11 +24,11 @@ repositories {
 dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
-    implementation 'org.springframework:spring-beans:5.2.4.RELEASE'
-    implementation 'org.springframework:spring-jdbc:5.2.4.RELEASE'
+    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+    implementation 'com.oracle.database.jdbc:ojdbc8:19.9.0.0'
+    implementation 'org.springframework:spring-beans:5.2.5.RELEASE'
+    implementation 'org.springframework:spring-jdbc:5.2.5.RELEASE'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
