@@ -3,6 +3,7 @@
 # allowed parameters:  D W N B C F P E H S V "*"
 # you can specify one or multiple parameters
 
-APPHOME=/home/rgddata/pipelines/fullAnnotIndex
+APPNAME="full-annot-index-pipeline"
+APPHOME=/home/rgddata/pipelines/$APPNAME
 
 $APPHOME/_run.sh "$@"
