@@ -1,6 +1,7 @@
 # generate full annot index for all public ontologies
 #
-APPHOME=/home/rgddata/pipelines/fullAnnotIndex
+APPNAME="full-annot-index-pipeline"
+APPHOME=/home/rgddata/pipelines/$APPNAME
 SERVER=`hostname -s | tr '[a-z]' '[A-Z]'`
 EMAIL_LIST=mtutaj@mcw.edu
 if [ "$SERVER" == "REED" ]; then
@@ -9,5 +10,5 @@ fi
 
 $APPHOME/index.sh "*" >/dev/null 2>&1
 
-mailx -s "[$SERVER] Output from full annot index pipeline" $EMAIL_LIST < $APPHOME/logs/summary.log
+mailx -s "[$SERVER] Full annot index pipeline OK" $EMAIL_LIST < $APPHOME/logs/summary.log
 
